cmake_minimum_required (VERSION 3.0)
project(esl)
if(NOT DEFINED ENV{SYSTEMC})
    message(FATAL_ERROR "not defined environment variable:SYSTEMC")
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
endif()

include_directories($ENV{SYSTEMC}/include utils comp)
link_directories($ENV{SYSTEMC}/lib-linux64)
aux_source_directory(. DIR_SRC)
add_subdirectory(utils)
add_subdirectory(comp)
add_compile_options(-g -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable)
add_executable(esl ${DIR_SRC})
target_link_libraries(esl systemc utils comp)

